feat: 연결 대상 이름 조회, 포트CRUD, 정렬/검색기능 #13